hphp/test/slow/traits/require_constraint_iface_implements_error.php.expectf
Fatal error: Only traits may use 'require implements'. in %s/test/slow/traits/require_constraint_iface_implements_error.php on line 10